# time_tag_birthday_prompt

./: LICENSE  README.md  pyproject.toml
tests/: __init__.py  extend_unittest.py  test_birthday.py  test_birthday_notifier.py  test_daily_prompt.py  test_data_loader.py  test_primary_prompt.py  test_secondary_prompt.py  test_time_tag.py
time_tag_birthday_prompt/: __init__.py  __main__.py  birthday.py  birthday_notifier.py  daily_prompt.py  data_birthdays.py  data_loader.py  data_time_tags.py  exceptions.py  primary_prompt.py  sample_time_tag_birthday.json  secondary_prompt.py  time_tag.py
